--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -8,14 +8,13 @@ on:
 jobs:
   run-server:
     runs-on: ubuntu-latest
+    env:
+      FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+      FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '18'
       - run: npm install
-      - name: Create .env file
-        run: |
-          echo 'FIREBASE_CREDENTIALS=${{ secrets.FIREBASE_CREDENTIALS }}' > .env
-          echo "FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}" >> .env
       - run: node index.js
