--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -1,21 +1,17 @@
 name: Node.js Server
 on:
-  push:
-    branches: [ main ]
-  schedule:
-    - cron: '*/5 * * * *'
+  repository_dispatch:
+    types: [register, unregister]
 
 jobs:
   run-server:
     runs-on: ubuntu-latest
-    env:
-      FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
-      FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-      SECURITY_KEY: ${{ secrets.SECURITY_KEY }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-        with:
-          node-version: '18'
       - run: npm install
       - run: node index.js
+        env:
+          FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          SECURITY_KEY: ${{ secrets.SECURITY_KEY }}
